# gh-actions-lab

./: main.py  pyproject.toml
.github/workflows/: pull_request.yml  push.yml  push_on_branch.yml  release.yml
