[tool.poetry]
name = "gh-actions-lab"
version = "0.1.0"
description = ""
authors = ["Mathieu Poussin <mathieu.poussin@cardiologs.com>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
